--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ backend/npm-debug.log*
 backend/yarn-debug.log*
 backend/yarn-error.log*
 
+*.csv
+
 # macOS & general system junk
 .DS_Store
 Thumbs.db
