--- a/frontend/app.json
+++ b/frontend/app.json
@@ -26,7 +26,8 @@
     "plugins": [
       "expo-router",
       "expo-font",
-      "expo-video"
+      "expo-video",
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
