--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,7 +46,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "expo-av": "~15.1.7",
-    "expo-video": "~2.2.2"
+    "expo-video": "~2.2.2",
+    "expo-secure-store": "~14.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
