--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,15 +1,16 @@
 {
   "expo": {
-    "name": "frontend",
-    "slug": "frontend",
+    "name": "StockMateAI",
+    "slug": "StockMateAI",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "scheme": "frontend",
+    "icon": "./assets/images/stockmate-icon.png",
+    "scheme": "StockMateAI",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.neegupta20.StockMate"
     },
     "android": {
       "adaptiveIcon": {
